[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/SourceCodePro-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/PauseScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 374.0
margin_top = 210.0
margin_right = 650.0
margin_bottom = 389.0

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 276.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "Resume Game"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 276.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 2 )
text = "Quit Game"

[node name="Pause" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 276.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 3 )
text = "Reset Game"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Pause" to="." method="_on_Button_pressed"]
